# imdb-sentiment-classifier

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
app/: main.py
configs/: config.yaml
docs/: business_report.html
models/: lr_tuned_calibrated_pipeline.joblib
monitoring/: drift_report.py
reports/figures/: drift_report.html
reports/metrics/: bert_calibration_check_2026-04-01.json  bert_training_2026-04-01.json  drift_summary_2026-04-02.json  phase2_all_cv_results_2026-04-01.json  phase2_baseline_metrics_2026-04-01.json  phase2_business_tradeoff_2026-04-01.json  phase2_calibration_results_2026-04-01.json  phase2_optuna_results_2026-04-01.json  phase2_shap_results_2026-04-01.json  phase2_shap_word_highlights_2026-04-01.json  phase2_test_results_2026-04-01.json  phase2_threshold_results_2026-04-01.json
src/: config.py
src/bert/: dataset.py  fine_tune.py  inference.py
src/data/: cleaner.py  loader.py  validator.py
src/features/: text_processing.py
src/models/: calibration.py  evaluate.py  explain.py  pipelines.py  threshold.py  train.py  tuning.py
src/utils/: logger.py
streamlit_app/: app.py  requirements.txt
tests/: test_api.py  test_config.py  test_models.py
